Fixed the login screen so that the login box doesn't overlap the logo. Fixed a spontaneous bug in the Eighth code that made displaying the date & block in the Choose Activity pane break.

--- a/www/extra-css/login.css
+++ b/www/extra-css/login.css
@@ -8,8 +8,8 @@
 }
 .middle {
         height: 100%;
-        margin: auto auto auto auto;
-        padding-top: 15px;
+        margin: 10% auto auto auto;
+		padding-top: 15px;
 }
 .box {
 	padding: 10px;
